@@ -12,7 +12,7 @@ AMD64/macOS 10.13 and nanoMIPS/Linux.
 
 * A new configure option --with-gdbscripts-dir lets you install
   the gdb valgrind python monitor scripts in a specific location.
-  For example an distro could use it to install the scripts in a
+  For example a distro could use it to install the scripts in a
   safe load location --with-gdbscripts-dir=%{_datadir}/gdb/auto-load
   It is also possible to configure --without-gdb-scripts-dir so no
   .debug_gdb_scripts section is added to the vgpreload library and
@@ -53,6 +53,7 @@ are not entered into bugzilla tend to get forgotten about or ignored.
 473604  Fix bug472219.c compile failure with Clang 16
 473677  make check compile failure with Clang 16 based on GCC 13.x
 473870  FreeBSD 14 applications fail early at startup
+473944  Handle mold linker split RW PT_LOAD segments correctly
 n-i-bz  Allow arguments with spaces in .valgrindrc files
 
 To see details of a given bug, visit
